--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         radial-gradient(circle at 58% 78%, rgba(255,255,255,0.07), rgba(255,255,255,0) 56%),
         linear-gradient(180deg,#1b2025 0%, #181c21 55%, #161a1e 100%),
         url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='150' height='150'><filter id='n'><feTurbulence type='fractalNoise' baseFrequency='1' numOctaves='5' stitchTiles='stitch'/></filter><rect width='150' height='150' filter='url(%23n)' opacity='0.35'/></svg>"); }
-  header { display:flex; flex-direction:column; align-items:center; width:100%; }
+  header { display:flex; flex-direction:column; align-items:center; width:100%; position:relative; }
   .hero { width:100%; padding:1.4rem 0 1.1rem; display:flex; flex-direction:column; align-items:center; gap:.8rem; background:linear-gradient(180deg,rgba(13,15,18,0.95),rgba(13,15,18,0.75) 60%,rgba(13,15,18,0)); transition:opacity .4s ease, transform .5s ease; }
   .hero.collapsed { opacity:0; pointer-events:none; }
   /* Shrink behavior */
@@ -189,23 +189,30 @@
   .progress-bar { height:14px; width:100%; background:#1f2730; border-radius:8px; overflow:hidden; position:relative; box-shadow:0 2px 6px -2px rgba(0,0,0,.5) inset,0 0 0 1px #1d252d; }
   .progress-bar__fill { position:absolute; top:0; left:0; height:100%; width:0; background:var(--accent-grad); transition:width .45s cubic-bezier(.55,.12,.25,.9); }
   #itemsRemaining { font-size:.7rem; letter-spacing:1.5px; text-transform:uppercase; font-weight:600; color:#b9c5cf; background:#25313c; padding:.3rem .65rem .32rem; border-radius:999px; box-shadow:0 2px 4px -2px rgba(0,0,0,.5),0 0 0 1px #2b3741; }
-  .controls { position:fixed; top:.55rem; right:.15rem; display:flex; gap:.4rem; z-index:80; align-items:center; }
+  .controls { position:fixed; top:.55rem; right:6px; left:auto; display:flex; gap:.4rem; z-index:80; align-items:center; justify-content:flex-end; margin:0; padding:0; white-space:nowrap; }
+  .controls > * { margin:0; }
+  .controls > *:last-child { padding-right:0.45rem; border-top-right-radius:0; border-bottom-right-radius:0; }
+  /* Mobile refinement: tighter gap & smaller horizontal padding to reduce visual shift toward center */
+  @media (max-width:640px){
+    .controls { top:.4rem; gap:.28rem; }
+    .controls > * { padding:0.4rem 0.5rem; }
+    #resetBtn { padding-left:1.25rem; }
+    #resetBtn::before { left:.48rem; }
+  }
   /* Controls stay fixed at very top now; floating bar will shift below them dynamically via JS */
   .controls { transition:opacity .4s ease, transform .45s ease; }
   .controls.hide-on-scroll { opacity:0; transform:translateY(-14px); pointer-events:none; }
-  .controls #toTopBtn { width:34px; height:34px; display:flex; align-items:center; justify-content:center; font-size:.9rem; font-weight:700; background:rgba(40,48,56,.65); backdrop-filter:blur(4px); border:1px solid #2a3541; border-radius:8px; cursor:pointer; color:var(--fg); opacity:0; transform:translateY(-6px); pointer-events:none; transition:opacity .3s ease, transform .35s ease, border-color .25s; }
-  .controls #toTopBtn:hover { border-color:var(--accent); }
-  .controls #toTopBtn.visible { opacity:1; transform:translateY(0); pointer-events:auto; }
   @media (max-width:650px){
     .controls { opacity:.55; transition:opacity .3s ease; }
     .controls:focus-within, .controls:hover { opacity:1; }
   }
-  #langSel, button { background:rgba(32,40,48,.55); backdrop-filter:blur(4px); color:var(--fg); border:1px solid #2a3541; padding:0.45rem 0.7rem; border-radius:6px; font-size:0.65rem; letter-spacing:.6px; text-transform:uppercase; font-weight:600; }
+  #langSel, button { background:rgba(32,40,48,.55); backdrop-filter:blur(4px); color:var(--fg); border:1px solid #2a3541; padding:0.45rem 0.6rem; border-radius:6px; font-size:0.65rem; letter-spacing:.6px; text-transform:uppercase; font-weight:600; margin:0; }
   /* Reset icon */
   #resetBtn { position:relative; padding-left:1.4rem; }
   #resetBtn::before { content:"↺"; position:absolute; left:.55rem; top:50%; transform:translateY(-52%); font-size:.7rem; opacity:.85; }
   /* Guide button icon handled via own markup; language flags for select */
-  #langSel.flagged { padding-left:1.6rem; background-position:.45rem center; background-size:1.05rem auto; background-repeat:no-repeat; }
+  /* Removed flag styling: revert to simple select */
+  #langSel.flagged { background:none!important; }
   button:hover, #langSel:hover { border-color:var(--accent); }
   /* #resetBtn additional overrides can go here if needed */
     main { max-width:1400px; margin:0 auto; padding:0.75rem 1rem 2rem; }
@@ -266,14 +273,13 @@
 <!-- AdSense script already included in <head>; keep this placeholder commented to avoid double load -->
 <header>
   <div class="hero">
-    <div class="controls">
+  <div class="controls" role="group" aria-label="Utility controls">
       <label for="langSel" class="sr-only">Language</label>
       <select id="langSel" aria-label="Language">
         <option value="en">EN</option>
         <option value="es">ES</option>
       </select>
-      <button id="resetBtn" data-i18n="reset">Reset</button>
-      <button id="toTopBtn" aria-label="Back to top" title="Back to top">↑</button>
+          <button id="resetBtn" data-i18n="reset">Reset</button>
     </div>
     <img src="./assets/images/ss3.png" alt="Silksong" loading="lazy" decoding="async" />
     <h1 data-i18n="app.title">100% Completion Checklist</h1>
@@ -413,16 +419,7 @@
       modal.addEventListener('click', e=>{ if(e.target===modal) close(); });
       document.addEventListener('keydown', e=>{ if(e.key==='Escape' && !modal.classList.contains('hidden')) close(); });
     }
-    // Language flag decoration
-    const sel = document.getElementById('langSel');
-    function applyFlag(){
-      if(!sel) return;
-      sel.classList.add('flagged');
-      const v = sel.value || 'en';
-      const flag = v==='es' ? 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3 2"><rect width="3" height="2" fill="%23AA151B"/><rect y="0.5" width="3" height="1" fill="%23F1BF00"/></svg>' : 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 30"><clipPath id="s"><path d="M0,0 v30 h60 v-30 z"/></clipPath><clipPath id="t"><path d="M30,15 h30 v15 z v15 h-30 z h-30 v-15 z v-15 h30 z"/></clipPath><g clip-path="url(%23s)"><path d="M0,0 v30 h60 v-30 z" fill="%23012862"/><path d="M0,0 L60,30 M60,0 L0,30" stroke="%23fff" stroke-width="6"/><path d="M0,0 L60,30 M60,0 L0,30" stroke="%23C8102E" stroke-width="4" clip-path="url(%23t)"/><path d="M30,0 v30 M0,15 h60" stroke="%23fff" stroke-width="6"/><path d="M30,0 v30 M0,15 h60" stroke="%23C8102E" stroke-width="4"/></g></svg>';
-      sel.style.backgroundImage = `url(${flag})`;
-    }
-    if(sel){ sel.addEventListener('change', applyFlag); applyFlag(); }
+    // (Flag decoration removed; simple language select retained)
   })();
   // Deferred mid-content ad insertion after 2nd category render
   (function(){
@@ -489,21 +486,14 @@
 <script>
   (function(){
     const hero = document.querySelector('.hero');
-    const toTop = document.getElementById('toTopBtn');
-    if(!hero || !toTop) return;
-    const shrinkStart = 40; // px
-    const fullHeight = hero.offsetHeight;
-    const trigger = fullHeight * 0.55;
-    function onScroll(){
-      const y = window.scrollY || document.documentElement.scrollTop;
-      // shrink toggle
-      if(y > shrinkStart) hero.classList.add('shrink'); else hero.classList.remove('shrink');
-      // back to top visibility
-      if(y > trigger){ toTop.classList.add('visible'); } else { toTop.classList.remove('visible'); }
-    }
-    window.addEventListener('scroll', onScroll, { passive:true });
-    onScroll();
-    toTop.addEventListener('click', () => { window.scrollTo({ top:0, behavior:'smooth' }); });
+      if(!hero) return;
+      const shrinkStart = 40; // px
+      function onScroll(){
+        const y = window.scrollY || document.documentElement.scrollTop;
+        if(y > shrinkStart) hero.classList.add('shrink'); else hero.classList.remove('shrink');
+      }
+      window.addEventListener('scroll', onScroll, { passive:true });
+      onScroll();
   })();
 </script>
 </body>
