--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Silksong Checklist" />
-  <title>Silksong 100% Checklist &amp; Guide</title>
-  <meta name="description" content="A complete, interactive Hollow Knight: Silksong checklist. Track every item, shard, fragment, ability and upgrade to reach 100% completion." />
+  <title>Hollow Knight: Silksong | Interactive 100% checklist &amp; Guide</title>
+  <meta name="description" content="Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc." />
   <!-- Spanish alternate description (used on ES static variant) -->
   <meta name="description" lang="es" content="Checklist interactivo completo de Hollow Knight: Silksong. Marca cada objeto, fragmento, mejora y habilidad para alcanzar el 100% de progreso." />
   <!-- AdSense account meta (recommended) -->
@@ -35,16 +35,16 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Silksong 100% Checklist" />
   <meta property="og:url" content="https://checklistsilksong.com/" />
-  <meta property="og:title" content="Silksong 100% Checklist & Guide" />
-  <meta property="og:description" content="Track all Hollow Knight: Silksong collectibles, abilities & upgrades toward 100% completion." />
+  <meta property="og:title" content="Hollow Knight: Silksong | Interactive 100% checklist & Guide" />
+  <meta property="og:description" content="Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc." />
   <meta property="og:image" content="https://checklistsilksong.com/assets/images/ss_og_preview.png" />
   <meta property="og:image:alt" content="Silksong 100% Checklist interface preview" />
   <meta property="og:locale" content="en_US" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Silksong 100% Checklist & Guide" />
-  <meta name="twitter:description" content="Interactive Hollow Knight: Silksong checklist to reach 100% completion." />
+  <meta name="twitter:title" content="Hollow Knight: Silksong | Interactive 100% checklist & Guide" />
+  <meta name="twitter:description" content="Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc." />
   <meta name="twitter:image" content="https://checklistsilksong.com/assets/images/ss_og_preview.png" />
   <!-- TODO: Add your Twitter handle here. Example: <meta name="twitter:site" content="@mytwitter" /> -->
 
@@ -73,7 +73,7 @@
         "@type": "WebSite",
         "@id": "https://checklistsilksong.com/#website",
         "url": "https://checklistsilksong.com/",
-        "name": "Silksong 100% Checklist",
+        "name": "Hollow Knight: Silksong | Interactive 100% checklist & Guide",
         "inLanguage": ["en","es"],
         "potentialAction": {
           "@type": "SearchAction",
@@ -83,11 +83,11 @@
       },
       {
         "@type": "WebApplication",
-        "name": "Silksong 100% Checklist",
+        "name": "Hollow Knight: Silksong | Interactive 100% checklist & Guide",
         "url": "https://checklistsilksong.com/",
         "applicationCategory": "GameApplication",
         "operatingSystem": "Any",
-        "description": "Interactive Hollow Knight: Silksong checklist to track collectibles, abilities and upgrades toward 100% completion.",
+        "description": "Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc.",
         "inLanguage": ["en","es"],
         "offers": {"@type": "Offer", "price": "0", "priceCurrency": "USD"}
       }
