chore(analytics): update GA4 measurement ID to G-3ZD7H8X2CE

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
   }</script>
 
   <!-- Google Analytics 4 (solo, configuración mínima) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZCGX9CG55"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3ZD7H8X2CE"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-6ZCGX9CG55');
+  gtag('config', 'G-3ZD7H8X2CE');
   </script>
   <!-- Ads / Monetization (AdSense snippet inserted when client ID provided) -->
   <!-- Google AdSense (script activo; unidades de anuncio ocultas hasta aprobación) -->
