--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
   #progressPercentText { font-size:1.05rem; letter-spacing:2px; text-transform:uppercase; font-weight:700; background:var(--accent-grad); -webkit-background-clip:text; background-clip:text; color:transparent; text-shadow:0 0 18px rgba(79,179,255,.28); }
   .progress-bar { height:14px; width:100%; background:#1f2730; border-radius:8px; overflow:hidden; position:relative; box-shadow:0 2px 6px -2px rgba(0,0,0,.5) inset,0 0 0 1px #1d252d; }
   .progress-bar__fill { position:absolute; top:0; left:0; height:100%; width:0; background:var(--accent-grad); transition:width .45s cubic-bezier(.55,.12,.25,.9); }
+  /* Badge y notas para categorías/ítems opcionales */
+  .badge-opt { display:inline-block; font-size:.55rem; line-height:1; background:#2a3340; color:#ffc94d; padding:.15rem .35rem .22rem; border-radius:6px; margin-left:.4rem; letter-spacing:.5px; box-shadow:0 0 0 1px #394653; vertical-align:middle; }
+  .item.optional-item { position:relative; }
+  .item .optional-note { margin-top:.35rem; font-size:.55rem; letter-spacing:1px; font-weight:600; text-transform:uppercase; display:inline-block; background:#25313c; padding:.25rem .5rem .3rem; border-radius:999px; color:#d7e4ed; box-shadow:0 0 0 1px #2e3b46; opacity:.9; }
+  .item.optional-item .checkmark { color:#ffc94d; }
   #itemsRemaining { font-size:.7rem; letter-spacing:1.5px; text-transform:uppercase; font-weight:600; color:#b9c5cf; background:#25313c; padding:.3rem .65rem .32rem; border-radius:999px; box-shadow:0 2px 4px -2px rgba(0,0,0,.5),0 0 0 1px #2b3741; }
   .controls { position:fixed; top:.55rem; right:6px; left:auto; display:flex; gap:.4rem; z-index:80; align-items:center; justify-content:flex-end; margin:0; padding:0; white-space:nowrap; }
   .controls > * { margin:0; }
