--- a/index.html
+++ b/index.html
@@ -228,7 +228,8 @@
   /* Badge y notas para categorías/ítems opcionales */
   .badge-opt { display:inline-block; font-size:.55rem; line-height:1; background:#2a3340; color:#ffc94d; padding:.15rem .35rem .22rem; border-radius:6px; margin-left:.4rem; letter-spacing:.5px; box-shadow:0 0 0 1px #394653; vertical-align:middle; }
   .item.optional-item { position:relative; }
-  .item .optional-note { margin-top:.35rem; font-size:.55rem; letter-spacing:1px; font-weight:600; text-transform:uppercase; display:inline-block; background:#25313c; padding:.25rem .5rem .3rem; border-radius:999px; color:#d7e4ed; box-shadow:0 0 0 1px #2e3b46; opacity:.9; }
+  .item .optional-note { margin:0 0 .35rem 0; font-size:.55rem; letter-spacing:1px; font-weight:600; text-transform:uppercase; display:inline-inline; background:#25313c; padding:.22rem .55rem .26rem; border-radius:999px; color:#d7e4ed; box-shadow:0 0 0 1px #2e3b46; opacity:.9; align-self:flex-start; }
+  .category-optional-note { grid-column:1/-1; background:#202830; border:1px dashed #33414d; color:#c2ced6; font-size:.55rem; letter-spacing:.6px; padding:.45rem .6rem .5rem; border-radius:8px; margin:0 0 .4rem; line-height:1.35; }
   .item.optional-item .checkmark { color:#ffc94d; }
   #itemsRemaining { font-size:.7rem; letter-spacing:1.5px; text-transform:uppercase; font-weight:600; color:#b9c5cf; background:#25313c; padding:.3rem .65rem .32rem; border-radius:999px; box-shadow:0 2px 4px -2px rgba(0,0,0,.5),0 0 0 1px #2b3741; }
   .controls { position:fixed; top:.55rem; right:6px; left:auto; display:flex; gap:.4rem; z-index:80; align-items:center; justify-content:flex-end; margin:0; padding:0; white-space:nowrap; }
