feat(locale+ux): early locale bootstrap, FOUC fix, 100% celebration animation

--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&display=swap" rel="stylesheet">
+  <script>/* early locale bootstrap */(function(){try{var KEY='silksongChecklistLocale_v1';var stored=localStorage.getItem(KEY);if(stored&&(stored==='en'||stored==='es')){document.documentElement.lang=stored;document.documentElement.setAttribute('data-locale',stored);} }catch(e){}})();</script>
 </head>
-<body>
+<body class="pre-init">
 <!-- Removed legacy GTM noscript iframe to keep analytics minimal -->
 
 <!-- AdSense placeholder (uncomment when real publisher ID added) -->
