fix(lang): show language menu when expanded and make options focusable

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
           <span class="lang-caret" aria-hidden="true"></span>
         </button>
         <ul id="langMenu" class="lang-menu" role="listbox" aria-label="Language" hidden>
-          <li role="option" data-lang="en" aria-selected="true"><span class="flag flag-en" aria-hidden="true"></span><span class="opt-code">EN</span></li>
-          <li role="option" data-lang="es" aria-selected="false"><span class="flag flag-es" aria-hidden="true"></span><span class="opt-code">ES</span></li>
+          <li role="option" data-lang="en" aria-selected="true" tabindex="-1"><span class="flag flag-en" aria-hidden="true"></span><span class="opt-code">EN</span></li>
+          <li role="option" data-lang="es" aria-selected="false" tabindex="-1"><span class="flag flag-es" aria-hidden="true"></span><span class="opt-code">ES</span></li>
         </ul>
       </div>
       <button id="resetBtn" data-i18n="reset" class="btn-icon-labeled btn-reset"><span class="btn-label" data-i18n="reset">Reset</span></button>
