--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
   <meta name="twitter:description" content="Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc." />
   <meta name="twitter:image" content="https://checklistsilksong.com/assets/images/ss_og_preview.png" />
   <!-- TODO: Add your Twitter handle here. Example: <meta name="twitter:site" content="@mytwitter" /> -->
-  <!-- Optional: Provide Discord webhook endpoint at deploy time. Placeholder below is replaced in CI. -->
-  <!-- FEEDBACK_WEBHOOK_PLACEHOLDER -->
-  <meta name="feedback-webhook" content="__FEEDBACK_WEBHOOK__" />
+  <!-- Optional: Provide Discord webhook endpoint at deploy time (se inyecta en CI; mantener vacío en el repo) -->
+  <meta name="feedback-webhook" content="" />
 
   <!-- Preconnect & Performance Hints -->
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
