fix(webhook): force cache invalidation with fingerprint and aggressive cache-busting
- Add BUILD_ID fingerprint to index.html for cache invalidation
- Increment service worker version to v5
- Add production verification in deploy workflow
- Force multiple cache invalidation attempts post-deploy

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
   <meta name="twitter:image" content="https://checklistsilksong.com/assets/images/ss_og_preview.png" />
   <!-- TODO: Add your Twitter handle here. Example: <meta name="twitter:site" content="@mytwitter" /> -->
   <!-- Optional: Provide Discord webhook endpoint at deploy time (se inyecta en CI; mantener vacío en el repo) -->
-  <meta name="feedback-webhook" content="" />
+  <!-- BUILD_TIMESTAMP_CACHE_BUST -->
+  <meta name="feedback-webhook" data-build-id="__BUILD_ID__" content="" />
 
   <!-- Preconnect & Performance Hints -->
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
