chore(seo): add explicit PNG favicon sizes + shortcut icon for Google

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials" />
+  <!-- Explicit PNG favicon sizes to help Google Search pick up the site icon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="/assets/images/favicon-48x48.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="/assets/images/favicon-64x64.png">
+  <link rel="shortcut icon" href="/favicon.ico">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
