chore(seo): remove unused es hreflang and sitemap entry to avoid redirect warning

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <link rel="canonical" href="https://checklistsilksong.com/" />
   <!-- Internationalization (only EN & ES for now) -->
   <link rel="alternate" hreflang="en" href="https://checklistsilksong.com/" />
-  <!-- Point Spanish hreflang to planned static ES variant (can be generated later) -->
-  <link rel="alternate" hreflang="es" href="https://checklistsilksong.com/es/" />
+  <!-- (Removed temporary Spanish hreflang until static /es/ page exists) -->
   <link rel="alternate" hreflang="x-default" href="https://checklistsilksong.com/" />
 
   <!-- Favicons & App Icons (Simplified) -->
