fix: add missing es fallback keys and replace missing og/twitter image reference

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta property="og:url" content="https://checklistsilksong.com/" />
   <meta property="og:title" content="Hollow Knight: Silksong | Interactive 100% checklist & Guide" />
   <meta property="og:description" content="Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc." />
-  <meta property="og:image" content="https://checklistsilksong.com/assets/images/ss_og_preview.png" />
+  <meta property="og:image" content="https://checklistsilksong.com/assets/images/ss3.png" />
   <meta property="og:image:alt" content="Silksong 100% Checklist interface preview" />
   <meta property="og:locale" content="en_US" />
 
@@ -51,7 +51,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Hollow Knight: Silksong | Interactive 100% checklist & Guide" />
   <meta name="twitter:description" content="Interactive checklist for Hollow Knight: Silksong that will help you easily achieve 100% completion of the video game. Includes everything you need, maps, guides, etc." />
-  <meta name="twitter:image" content="https://checklistsilksong.com/assets/images/ss_og_preview.png" />
+  <meta name="twitter:image" content="https://checklistsilksong.com/assets/images/ss3.png" />
   <!-- TODO: Add your Twitter handle here. Example: <meta name="twitter:site" content="@mytwitter" /> -->
 
   
@@ -76,7 +76,7 @@
         "url": "https://checklistsilksong.com/",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://checklistsilksong.com/assets/images/ss_og_preview.png"
+          "url": "https://checklistsilksong.com/assets/images/ss3.png"
         }
       },
       {
